# semanticMapping

./: README.md
MaskRCNN/: README  sunrgbd.py
catkin_ws/src/image_segmentation/: CMakeLists.txt  package.xml
catkin_ws/src/image_segmentation/rviz/: mask_rcnn.rviz
catkin_ws/src/image_segmentation/scripts/: image_masking_server.py
catkin_ws/src/image_segmentation/src/: pcl_proc.cpp
catkin_ws/src/image_segmentation/srv/: maskImage.srv
catkin_ws/src/robot_launch/: guidebot.launch
catkin_ws/src/robot_launch/param/: costmap_common_params.yaml  depth.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml  rgb.yaml
catkin_ws/src/robot_launch/rviz/: guidebot.rviz
catkin_ws/src/robot_launch/urdf/: display.rviz  display_model.launch  guidebot.urdf
catkin_ws/src/rtabmap_ros/: MapAssemblerNode.cpp  README
rtabmap/: README  util3d.cpp
